2.3.2: Better tab completion